added playlist and redirect

--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,19 @@ button {
 .hotel--container {
   width: 33%; }
 
+.dc--container {
+  height: 100%;
+  width: 100%;
+  background-color: #031e31; }
+  .dc--container .header--navigation {
+    position: relative;
+    bottom: intial;
+    margin: 0px;
+    padding: 30px; }
+  .dc--container .tbd--title {
+    color: white;
+    text-align: center; }
+
 .home--recipe__title {
   z-index: 40;
   top: 71px;
@@ -198,6 +211,19 @@ button {
   opacity: 0.85;
   width: 100%;
   text-align: center; }
+
+.stlouis--container {
+  height: 100%;
+  width: 100%;
+  background-color: #031e31; }
+  .stlouis--container .header--navigation {
+    position: relative;
+    bottom: intial;
+    margin: 0px;
+    padding: 30px; }
+  .stlouis--container .tbd--title {
+    color: white;
+    text-align: center; }
 
 /* ==========================================================================
    Normalize.scss settings
